# scrap

./: .gitignore  Cargo.toml  README.md  TODO.md  ast.ron  bacon.toml  justfile  lib.rs  mise.toml  output.rs  output.sc  rust-toolchain.toml  test.rs  test_formatter.rs  test_ir.sc  test_new_ast.sc  test_return.sc  typos.toml
.claude/: settings.local.json
.config/: hakari.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
code_extention/: README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
code_extention/syntaxes/: scrap.tmLanguage.json
crates/scrap/: Cargo.toml
crates/scrap/src/: main.rs
crates/scrap/src/commands/: build.rs  fmt.rs  mod.rs  new.rs  run.rs
crates/scrap_ast/: Cargo.toml
crates/scrap_ast/src/: block.rs  enumdef.rs  expr.rs  field.rs  fndef.rs  foreign.rs  ident.rs  impl_block.rs  item.rs  lib.rs  lit.rs  local.rs  module.rs  node_id.rs  operators.rs  pat.rs  path.rs  shared.rs  stmt.rs  structdef.rs  typedef.rs
crates/scrap_ast_lowering/: Cargo.toml
crates/scrap_ast_lowering/src/: cfg_builder.rs  expr_lowering.rs  lib.rs  lowerer.rs  lowering.rs  test_helpers.rs  ty_convert.rs
crates/scrap_ast_lowering/src/lowering/: expr.rs  module.rs  ty.rs
crates/scrap_ast_lowering/src/lowering/expr/: array.rs  assign.rs  binary.rs  block.rs  call.rs  control.rs  lit.rs  match_expr.rs  method_call.rs  path.rs  struct_expr.rs  unary.rs
crates/scrap_codegen/: Cargo.toml  README.md
crates/scrap_codegen/src/: error.rs  jit.rs  lib.rs  object.rs
crates/scrap_codegen/src/codegen/: context.rs  cranelift_ir.rs  function.rs  mod.rs  ty.rs
crates/scrap_diagnostics/: Cargo.toml
crates/scrap_diagnostics/src/: lib.rs
crates/scrap_driver/: Cargo.toml
crates/scrap_driver/src/: args.rs  cache.rs  lib.rs  parsing.rs  pretty.rs  utils.rs
crates/scrap_errors/: Cargo.toml
crates/scrap_errors/src/: lib.rs
crates/scrap_formatter/: Cargo.toml
crates/scrap_formatter/src/: formatter.rs  lib.rs
crates/scrap_ir/: Cargo.toml
crates/scrap_ir/src/: ir.rs  ir_builder.rs  lib.rs  mir.rs  mir_builder.rs  pretty.rs
crates/scrap_lexer/: Cargo.toml
crates/scrap_lexer/src/: error.rs  lib.rs  token_stream.rs
crates/scrap_lexer/src/snapshots/: scrap_lexer__tests__basic.snap  scrap_lexer__tests__basic.snap.new
crates/scrap_lsp/: Cargo.toml
crates/scrap_lsp/src/: main.rs  trace_layer.rs
crates/scrap_macros/: Cargo.toml
crates/scrap_macros/src/: expand_tokens.rs  lib.rs  salsa_test.rs
crates/scrap_parser/: Cargo.toml
crates/scrap_parser/src/: ast.rs  error.rs  errors.rs  lib.rs  parser.rs  utils.rs
crates/scrap_parser/src/parse_error/: kind.rs  mod.rs  pattern.rs  reason.rs
crates/scrap_parser/src/parser/: binary.rs  block.rs  enumdef.rs  expr.rs  field.rs  fndef.rs  foreign.rs  ident.rs  impl_block.rs  item.rs  lit.rs  local.rs  module.rs  operators.rs  pat.rs  stmt.rs  structdef.rs  ty.rs  typedef.rs  utils.rs
crates/scrap_parser/src/parser/expr/: atom.rs  binary.rs  block_expr.rs  call.rs  if_expr.rs  inline.rs  items.rs  mod.rs  path.rs  pratt.rs
crates/scrap_parser/tests/: snapshots.rs
crates/scrap_parser/tests/snapshots/: snapshots__enum_def.snap  snapshots__function_with_params.snap  snapshots__if_expr.snap  snapshots__inner_-2.snap  snapshots__inner_-3.snap  snapshots__inner_-4.snap  snapshots__inner_-5.snap  snapshots__inner_-6.snap  snapshots__inner_-7.snap  snapshots__inner_.snap  snapshots__module_def.snap  snapshots__simple_function.snap  snapshots__struct_def.snap  snapshots__use_statement.snap
crates/scrap_parser_rowan/: Cargo.toml
crates/scrap_parser_rowan/src/: language.rs  lib.rs  parser.rs  syntax_kind.rs
crates/scrap_parser_rowan/src/parser/: block.rs  enumdef.rs  expr.rs  fndef.rs  item.rs  path.rs  stmt.rs  structdef.rs  ty.rs
crates/scrap_parser_rowan/src/parser/expr/: atom.rs
crates/scrap_parser_rowan/tests/: snapshots.rs
crates/scrap_parser_rowan/tests/snapshots/: snapshots__enum_def.snap  snapshots__function_with_params.snap  snapshots__if_expr.snap  snapshots__inner_-2.snap  snapshots__inner_-3.snap  snapshots__inner_-4.snap  snapshots__inner_-5.snap  snapshots__inner_-6.snap  snapshots__inner_-7.snap  snapshots__inner_.snap  snapshots__module_def.snap  snapshots__simple_function.snap  snapshots__struct_def.snap  snapshots__use_statement.snap
crates/scrap_rt/: Cargo.toml
crates/scrap_rt/src/: coroutine.rs  gc.rs  lib.rs  sync.rs
crates/scrap_salsa/: Cargo.toml
crates/scrap_salsa/src/: lib.rs
crates/scrap_shared/: Cargo.toml
crates/scrap_shared/src/: id.rs  ident.rs  lib.rs  path.rs  pretty_print.rs  salsa.rs  types.rs
crates/scrap_span/: Cargo.toml
crates/scrap_span/src/: lib.rs
crates/scrap_test_utils/: Cargo.toml
crates/scrap_test_utils/src/: lib.rs
crates/scrap_tycheck/: Cargo.toml
crates/scrap_tycheck/src/: check.rs  constraints.rs  context.rs  infer.rs  lib.rs  resolved.rs  table.rs  types.rs  unify.rs
crates/workspace-hack/: Cargo.toml
docs/rust_ast/doc.rs/: Attribute.md  BinOp.md  BinOpKind.md  EnumDef.md  Expr.md  ExprKind.md  FnDecl.md  FnHeader.md  GenericParam.md  Generics.md  LitKind.md  (+15 more)
example/: basic.sc  complex.sc  enums.sc  external_module.sc  hello_world.sc  operators.sc  simple_return_test.sc  test_comments.sc  test_return.sc  test_return_fail.sc
example_pg/: basic.sc
libs/core/: Scrap.toml
libs/std/: Scrap.toml
runtime/allocator/: Cargo.toml
runtime/allocator/src/: lib.rs
runtime/coroutine/: Cargo.toml
scrap_examples/scrap_test/: Scrap.toml
src/: main.rs
tests/: basic.sc  deref_mut_err.sc  enums.sc  enums_struct.sc  gc_basic.sc  gc_complex.sc  gc_write.sc  hello.sc  if_basic.sc  if_complex.sc  if_else.sc  if_else_if.sc  loop_basic.sc  loop_continue.sc  methods.sc  methods_args.sc  methods_mut.sc  mutability.sc  mutability_err.sc  mutability_field.sc  overflow.sc  ref_from_gc.sc  ref_mut_from_gc.sc  refs.sc  refs_err_mut_immutable.sc  refs_err_write_immutable.sc  refs_mut.sc  spawn_basic.sc  spawn_block.sc  spawn_multi.sc  stack_growth.sc  structs.sc  structs_err.sc  types.sc  while_basic.sc
(+4 files in other folders)
