[package]
name = "scrap"
version.workspace = true
edition.workspace = true

[dependencies]
scrap_codegen.workspace = true
scrap_parser.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }


[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
# Local crates
scrap_parser = { path = "crates/scrap_parser" }
scrap_lexer = { path = "crates/scrap_lexer" }
scrap_codegen = { path = "crates/scrap_codegen" }
scrap_macros = { path = "crates/scrap_macros" }


thiserror = "2"
anyhow = "1"
either = "1"
rayon = "1"
insta = "1"
thin-vec = "0.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wyhash = "0.6.0"
inflections = "1.1.1"
serde = "1"
serde_json = "1"
rustc-hash = "2.1.1"
parking_lot = "0.12.5"
crossbeam = "0.8"


# backend
cranelift = "0.125"
cranelift-module = "0.125"
cranelift-jit = "0.125"
cranelift-native = "0.125"
cranelift-object = "0.125"

# Parser
chumsky = "0.11.1"
ariadne = "0.5.1"

# Lexer 
logos = "0.15.1"

# macros
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"
bitflags = "2"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "allow"
unsafe_code = "warn"

[workspace.lints.clippy]
default_trait_access = "deny"
filter_map_next = "deny"
from_over_into = "deny"
manual_let_else = "deny"
match-wildcard-for-single-variants = "deny"
needless_borrow = "deny"
new_without_default = "deny"
redundant-closure-for-method-calls = "deny"
semicolon_if_nothing_returned = "deny"
trivially-copy-pass-by-ref = "deny"
type-complexity = "allow"
unused_async = "deny"
useless_conversion = "deny"
upper_case_acronyms = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"
