[package]
name = "scrapc"
version.workspace = true
edition.workspace = true

[dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
scrap_driver = { workspace = true }


[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
# Local crates
scrap_parser = { path = "crates/scrap_parser" }
scrap_parser_rowan = { path = "crates/scrap_parser_rowan" }
scrap_formatter = { path = "crates/scrap_formatter" }
scrap_lexer = { path = "crates/scrap_lexer" }
scrap_codegen = { path = "crates/scrap_codegen" }
scrap_macros = { path = "crates/scrap_macros" }
scrap_ir = { path = "crates/scrap_ir" }
scrap_ast_lowering = { path = "crates/scrap_ast_lowering" }
scrap_ast = { path = "crates/scrap_ast" }
scrap_diagnostics = { path = "crates/scrap_diagnostics" }
scrap_errors = { path = "crates/scrap_errors" }
scrap_span = { path = "crates/scrap_span" }
scrap_shared = { path = "crates/scrap_shared" }
scrap_driver = { path = "crates/scrap_driver" }
scrap_tycheck = { path = "crates/scrap_tycheck" }


either = "1"
wyhash = "0.6.0"
inflections = "1.1.1"
heck = "0.5.0"
target-lexicon = "0.13.3"
clap = { version = "4", features = ["derive"] }
salsa = { version = "0.24.0", features = ["persistence"] }
strum = "0.27.2"
strum_macros = "0.27.2"
pathdiff = "0.2.3"
toml = "0.9"

# diagnostics and error reporting
tracing = "0.1.41"
tracing-subscriber = "0.3"
thiserror = "2"
anyhow = "1"
annotate-snippets = "0.12"
ariadne = "0.6.0"
anstyle = "1.0.13"
anstream = "0.6.21"

# extended std like
rayon = "1"
thin-vec = "0.2"
parking_lot = "0.12.5"
crossbeam = "0.8"
rustc-hash = "2.1.1"
crossbeam-channel = "0.5.15"
hashbrown = "0.16"
indexmap = "2"

# testing
insta = "1"
expect-test = "1.4"

# serialization
bincode = { version = "2", default-features = false, features = [
    "serde",
    "std",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# backend
cranelift = "0.126"
cranelift-module = "0.126"
cranelift-jit = "0.126"
cranelift-native = "0.126"
cranelift-object = "0.126"

# Parser
chumsky = "0.11.1"

# Lexer
logos = "0.16"

# Rowan parser & formatting
rowan = "0.16.1"
text-size = "1.1"
pretty = "0.12"

# macros
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"
bitflags = "2"

# overide dependencies with git sources
[patch.crates-io]
# salsa = { git = "https://github.com/n1ght-hunter/salsa.git", rev = "a885bb4" }
salsa = { path = "../salsa" }

[workspace.lints.rust]
missing_docs = "allow"
unsafe_code = "warn"

[workspace.lints.clippy]
default_trait_access = "deny"
filter_map_next = "deny"
from_over_into = "deny"
manual_let_else = "deny"
match-wildcard-for-single-variants = "deny"
needless_borrow = "deny"
new_without_default = "deny"
redundant-closure-for-method-calls = "deny"
semicolon_if_nothing_returned = "deny"
trivially-copy-pass-by-ref = "deny"
type-complexity = "allow"
unused_async = "deny"
useless_conversion = "deny"
upper_case_acronyms = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"
