[package]
name = "scrap"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

scrap_driver.workspace = true
scrap_formatter.workspace = true
scrap_shared.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true
