[package]
name = "scrap_ast"
version.workspace = true
edition.workspace = true

[dependencies]
scrap_span.workspace = true
scrap_errors.workspace = true
thin-vec.workspace = true
scrap_lexer.workspace = true
strum.workspace = true
strum_macros.workspace = true
salsa.workspace = true
serde.workspace = true

[lints]
workspace = true
