[package]
name = "scrap_codegen"
version.workspace = true
edition.workspace = true

[dependencies]
# Local crates
scrap_ast.workspace = true
scrap_lexer.workspace = true
scrap_diagnostics.workspace = true
scrap_span.workspace = true
scrap_ir.workspace = true
scrap_ast_lowering.workspace = true
scrap_shared.workspace = true
scrap_errors.workspace = true
salsa.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Cranelift backend dependencies
cranelift.workspace = true
cranelift-module.workspace = true
cranelift-jit.workspace = true
cranelift-native.workspace = true
cranelift-object.workspace = true

# general dependencies
target-lexicon.workspace = true

[dev-dependencies]
insta.workspace = true
