[package]
name = "scrap_diagnostics"
version.workspace = true
edition.workspace = true

[dependencies]
annotate-snippets.workspace = true
anstyle.workspace = true
anstream.workspace = true
scrap_span.workspace = true
salsa.workspace = true
parking_lot.workspace = true
rayon.workspace = true
scrap_errors.workspace = true

[lints]
workspace = true
