[package]
name = "scrap_driver"
version.workspace = true
edition.workspace = true

[dependencies]
scrap_parser = { workspace = true }
scrap_lexer = { workspace = true }
# scrap_ir = { workspace = true }
scrap_ast = { workspace = true }
scrap_shared = { workspace = true }
scrap_span = { workspace = true }

clap = { workspace = true, features = ["derive"] }
salsa = { workspace = true, features = ["persistence"] }

[lints]
workspace = true
