[package]
name = "scrap_driver"
version.workspace = true
edition.workspace = true

[dependencies]
scrap_parser = { workspace = true }
scrap_lexer = { workspace = true }
scrap_ir = { workspace = true }
scrap_ast = { workspace = true }
scrap_ast_lowering = { workspace = true }
scrap_tycheck = { workspace = true }
scrap_shared = { workspace = true }
scrap_span = { workspace = true }
scrap_errors.workspace = true
scrap_codegen.workspace = true
scrap_diagnostics.workspace = true
crossbeam-channel = { workspace = true }
pathdiff = { workspace = true }

clap = { workspace = true, features = ["derive"] }
salsa = { workspace = true }
serde.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde_json.workspace = true
rayon.workspace = true
hashbrown.workspace = true
indexmap = {workspace = true, features = ["serde"]}
thin-vec.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true
