[package]
name = "scrap_formatter"
version.workspace = true
edition.workspace = true

[dependencies]
scrap_lexer = { workspace = true }
scrap_parser_rowan = { workspace = true }
scrap_shared = { workspace = true }
pretty = { workspace = true }
rowan = { workspace = true }
salsa = { workspace = true }
clap = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
expect-test.workspace = true

[[bin]]
name = "scrap-fmt"
path = "src/bin/scrap-fmt.rs"
