[package]
name = "scrap_lexer"
version.workspace = true
edition.workspace = true

[dependencies]
logos.workspace = true
thiserror.workspace = true
scrap_macros.workspace = true
scrap_span.workspace = true
salsa.workspace = true
scrap_salsa.workspace = true

[dev-dependencies]
insta.workspace = true


[lints]
workspace = true
