[package]
name = "scrap_lexer"
version.workspace = true
edition.workspace = true

[dependencies]
logos.workspace = true
thiserror.workspace = true
scrap_macros.workspace = true
scrap_span.workspace = true
salsa.workspace = true
scrap_shared.workspace = true
serde.workspace = true
scrap_diagnostics.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
insta.workspace = true


[lints]
workspace = true
