[package]
name = "scrap_lsp"
version.workspace = true
edition.workspace = true

[dependencies]
lsp-types = "0.97.0"
lsp-server = "0.7.9"
scrap_parser.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_json.workspace = true
anyhow.workspace = true
rustc-hash.workspace = true
serde.workspace = true
crossbeam.workspace = true

[lints]
workspace = true
