[package]
name = "scrap_macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
heck.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true
