[package]
name = "scrap_parser"
version.workspace = true
edition.workspace = true

[dependencies]
scrap_lexer.workspace = true
scrap_span.workspace = true
scrap_errors.workspace = true
scrap_ast.workspace = true
scrap_diagnostics.workspace = true


ariadne.workspace = true
thin-vec.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rayon.workspace = true
tracing.workspace = true
wyhash.workspace = true
inflections.workspace = true
strum.workspace = true
salsa.workspace = true
scrap_shared.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
