[package]
name = "scrap_parser_rowan"
version.workspace = true
edition.workspace = true

[dependencies]
rowan = { workspace = true }
text-size = { workspace = true }
scrap_lexer = { workspace = true }
scrap_span = { workspace = true }
scrap_shared = { workspace = true }
salsa = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
insta = { workspace = true }
scrap_macros = { workspace = true }
