[package]
name = "scrap_allocator"
version.workspace = true
edition.workspace = true

[features]
default = ["rtmalloc"]
tcmalloc = ["dep:tcmalloc-crate"]
mimalloc = ["dep:mimalloc-crate"]
jemalloc = ["dep:tikv-jemallocator"]
rpmalloc = ["dep:rpmalloc-crate"]
rtmalloc = ["dep:rtmalloc"]

[dependencies]
cfg-if = { workspace = true }
tcmalloc-crate = { package = "tcmalloc", version = "0.3", features = [
    "bundled",
], optional = true }
mimalloc-crate = { package = "mimalloc", version = "0.1", optional = true }
rpmalloc-crate = { package = "rpmalloc", version = "0.2", optional = true }
rtmalloc = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[lints]
workspace = true
